WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
113083
REGRESSION(
r146380
): media/track/track-user-preferences.html
https://bugs.webkit.org/show_bug.cgi?id=113083
Summary
REGRESSION(r146380): media/track/track-user-preferences.html
Ryosuke Niwa
Reported
2013-03-22 11:02:53 PDT
--- /Volumes/Data/slave/lion-release-tests-wk1/build/layout-test-results/media/track/track-user-preferences-expected.txt +++ /Volumes/Data/slave/lion-release-tests-wk1/build/layout-test-results/media/track/track-user-preferences-actual.txt @@ -1,3 +1,4 @@ +FAIL: Timed out waiting for notifyDone to be called Test track user preferences. @@ -5,44 +6,4 @@ Test 1: 'no' track selected because of user preferred language - creating tracks for: [en,fr,no]. -EVENT(load) -EXPECTED (event.target.srclang == 'no') OK -EXPECTED (event.target.readyState == '2') OK -Test 2: 'no' track still selected because of language, overriding 'default' attribute -- creating tracks for: [fr,en,no]. --- 'en' track marked as default. -EVENT(load) -EXPECTED (event.target.srclang == 'no') OK -EXPECTED (event.target.readyState == '2') OK - -Test 3: select 'fr' track from menu -- show captions menu. -EXPECTED (trackMenuItems[menuIndexForLanguage('French')].className == '') OK -EXPECTED (trackMenuItems[menuIndexForLanguage('English')].className == '') OK -EXPECTED (trackMenuItems[menuIndexForLanguage('Norwegian')].className == 'selected') OK -- click on 'French' menu item. -EVENT(load) -EXPECTED (event.target.srclang == 'fr') OK -EXPECTED (event.target.readyState == '2') OK -EXPECTED (video.textTracks[0].mode == 'showing') OK -EXPECTED (video.textTracks[0].language == 'fr') OK - -Test 4: preferred language was changed to 'fr' by selecting track from menu -- creating tracks for: [ru,en,fr]. -EVENT(load) -EXPECTED (event.target.srclang == 'fr') OK -EXPECTED (event.target.readyState == '2') OK -EXPECTED (video.textTracks[2].mode == 'showing') OK -EXPECTED (video.textTracks[2].language == 'fr') OK - -Test 5: turning captions off from menu disables caption selection -- show captions menu. -- click on 'Off' menu item. -- creating tracks for: [ru,jp,en]. -EXPECTED (video.textTracks[0].mode == 'disabled') OK -EXPECTED (video.textTracks[1].mode == 'disabled') OK -EXPECTED (video.textTracks[2].mode == 'disabled') OK - -END OF TEST - e.g.
http://build.webkit.org/results/Apple%20Lion%20Release%20WK1%20(Tests)/r146619%20(10721)/results.html
Attachments
Speculative fix.
(3.30 KB, patch)
2013-03-25 10:00 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2013-03-25 10:00:57 PDT
Created
attachment 194876
[details]
Speculative fix. Not flagging for review, this is just so the bots can test.
Eric Carlson
Comment 2
2013-03-25 12:50:54 PDT
Comment on
attachment 194876
[details]
Speculative fix. Looks like this fixes the test on the bots.
Jer Noble
Comment 3
2013-03-25 12:54:11 PDT
Comment on
attachment 194876
[details]
Speculative fix. View in context:
https://bugs.webkit.org/attachment.cgi?id=194876&action=review
r+, with nit.
> Source/WebCore/ChangeLog:10 > + No new tests, this fixes an existing test. > + > + * html/HTMLMediaElement.cpp:
Nit: a note here about why the test was failing would be nice.
Radar WebKit Bug Importer
Comment 4
2013-03-25 13:02:16 PDT
<
rdar://problem/13498100
>
Eric Carlson
Comment 5
2013-03-25 13:13:30 PDT
https://trac.webkit.org/r146801
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug