REGRESSION(r146380): media/track/track-user-preferences.html https://bugs.webkit.org/show_bug.cgi?id=113083

Reviewed by Jer Noble.

Source/WebCore: 

Ignore track change notifications triggered by automatic track selection so the 
configuration is not changed.

No new tests, this fixes an existing test.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::configureTextTrackGroup): Clear m_processingPreferenceChange after all
    track configuration is finished.
(WebCore::HTMLMediaElement::configureTextTrackDisplay): Do nothing if m_processingPreferenceChange
    is true.

LayoutTests: 

* platform/mac/TestExpectations: Remove test from expectations.


git-svn-id: svn://svn.chromium.org/blink/trunk@146801 bbb929c8-8fbe-4397-9dbb-9b2b20218538